fixed mobile layout issues and not found when refreshing site

--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,10 @@ hr {
         margin-left: 0;
         margin-top: 10vh;
     }
+
+    section {
+        width: 100vw;
+    }
 }
 
 @media screen and (max-width: 600px) {
