--- a/src/routes/Contact/contact.css
+++ b/src/routes/Contact/contact.css
@@ -19,3 +19,9 @@
     display:flex;
     font-size: 2rem;
 }
+
+@media screen and (max-width: 600px) {
+    .email {
+        font-size: 1rem;
+    }
+}
